--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
 @import 'theme-colors.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,400&display=swap');
 
 html {
     font-size: 16px;
     padding: 0;
     margin: 0;
-    font-family: 'roboto';
+    font-family: 'Roboto', sans-serif;
 }
 
 .section-title{
