--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 @import 'theme-colors.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,400&display=swap');
-
 html {
     font-size: 16px;
     padding: 0;
@@ -9,7 +8,7 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
-.section-title{
+.section-title {
     font-size: 2rem;
     text-align: center;
     color: var(--green-color);
@@ -19,11 +18,11 @@ html {
     padding: 9px 24px;
     width: max-content;
     border-radius: 20px;
-    background-color: #c2814c;
+    background-color: var(--orange-color);
     color: white;
     font-size: 0.75rem;
     transition: 0.4s;
     &:hover {
-        background-color: #af7544;
+        background-color: var(--orange-color);
     }
 }
