add transition variable

--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -1,4 +1,5 @@
-:root {
-    --green-color: #00704E;
-    --orange-color: #c2814c;
+:root{
+  --green-color: #00704E;
+  --transition-duration: .4s;
+  --orange-color: #c2814c;
 }
