add theme color

--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -1,5 +1,9 @@
 :root{
+  --background-color: #fff;
   --green-color: #00704E;
-  --transition-duration: .4s;
   --orange-color: #c2814c;
+
+
+  --transition-duration: .4s;
+  --border-radius: 3px;
 }
