--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -2,6 +2,7 @@
   --background-color: #fff;
   --green-color: #00704E;
   --orange-color: #c2814c;
+  --orange-hover: #b37747;
 
 
   --transition-duration: .4s;
