--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -3,6 +3,8 @@
   --green-color: #00704E;
   --orange-color: #c2814c;
   --orange-hover: #b37747;
+  --input: #F5FEFF9E;
+  --input-border: #CBD6E2;
 
 
   --transition-duration: .4s;
