--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -92,3 +92,20 @@ html {
 strong{
     font-weight: 500;
 }
+
+@media (min-width: 0px) and (max-width: 780px) {
+    .burger-menu{
+        display: block;
+    }
+    .main-nav{
+        display: none;
+    }
+}
+@media (min-width: 781px){
+    .burger-menu{
+        display: none;
+    }
+    .main-nav{
+        display: block;
+    }
+}
