--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -1,12 +1,10 @@
-:root{
-  --background-color: #fff;
-  --green-color: #00704E;
-  --orange-color: #c2814c;
-  --orange-hover: #b37747;
-  --input: #F5FEFF9E;
-  --input-border: #CBD6E2;
-
-
-  --transition-duration: .4s;
-  --border-radius: 3px;
+:root {
+    --background-color: #fff;
+    --blue-color: #26368D;
+    --orange-color: #FE7433;
+    --orange-hover: #d8632c;
+    --input: #F5FEFF9E;
+    --input-border: #CBD6E2;
+    --transition-duration: .4s;
+    --border-radius: 3px;
 }
