--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -1,6 +1,8 @@
 :root {
     --background-color: #fff;
+    --grey-color: #C3C3C3;
     --blue-color: #26368D;
+    --purple-color: #3B1658;
     --orange-color: #FE7433;
     --orange-hover: #d8632c;
     --input: #F5FEFF9E;
