--- a/src/style/theme-colors.scss
+++ b/src/style/theme-colors.scss
@@ -1,11 +1,14 @@
 :root {
     --background-color: #fff;
-    --grey-color: #C3C3C3;
-    --blue-color: #26368D;
+    --grey-color: #8f8f8f;
+    --green-color: #5d876f;
+    --green-hover: #4f725e;
+    --blue-color: #b5d5e0;
+    --pale-color: #cec9b5;
     --purple-color: #3B1658;
-    --orange-color: #FE7433;
+    --orange-color: #ff7865;
     --orange-hover: #d8632c;
-    --input: #F5FEFF9E;
+    --input: #FFF;
     --input-border: #CBD6E2;
     --transition-duration: .4s;
     --border-radius: 3px;
