--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,36 +7,46 @@ html {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     background-color: var(--background-color);
-    color: var(--purple-color);
+    color: var(--blue-color);
+}
+
+body {
+    overflow-x: hidden;
+}
+
+#app {
+    overflow-x: hidden;
 }
 
 .section-title {
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
-    color: var(--blue-color);
+    color: var(--green-color);
     font-weight: 500;
+    max-width: max-content;
+    margin: auto;
 }
 
 .btn-primary {
-    padding: 10px 30px;
+    padding: 17.5px 35px;
     display: inline-block;
     border-radius: 40px;
-    background-color: var(--orange-color);
-    color: #fff;
+    background-color: var(--green-color);
+    color: var(--pale-color);
     font-size: 1rem;
     transition-duration: var(--transition-duration);
     font-weight: 500;
     cursor: pointer;
     &:hover {
-        background-color: var(--orange-hover);
+        background-color: var(--green-hover);
     }
 }
 
-input.btn-primary{
+input.btn-primary {
     margin-top: 25px;
     font-weight: 600;
     width: 100%;
-    &:disabled{
+    &:disabled {
         cursor: not-allowed;
         background-color: var(--grey-color);
     }
@@ -46,8 +56,8 @@ input.btn-primary{
     padding: 10px 30px;
     display: inline-block;
     border-radius: 40px;
-    border: 1px solid var(--orange-color);
-    color: var(--orange-color);
+    border: 1px solid var(--green-color);
+    color: var(--green-color);
     background: var(--background-color);
     font-size: 1rem;
     transition-duration: var(--transition-duration);
@@ -74,7 +84,7 @@ input.btn-primary{
     min-width: 700px;
     &-header {
         padding: 15px;
-        background-color: var(--blue-color);
+        background-color: var(--green-color);
         color: #fff;
         font-weight: 500;
         display: flex;
@@ -99,7 +109,7 @@ input.btn-primary{
 }
 
 .link {
-    color: var(--orange-color);
+    color: var(--blue-color);
 }
 
 strong {
@@ -107,7 +117,6 @@ strong {
 }
 
 // Input css
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -117,59 +126,59 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-    -webkit-text-fill-color: var(--orange-color);
+    -webkit-text-fill-color: var(--green-color);
     -webkit-box-shadow: 0 0 0px 1000px #F5FEFF9E inset;
     transition: background-color 5000s ease-in-out 0s;
     background: var(--input);
     border: 1px solid var(--input-border);
-    padding: 10px 14px;
+    padding: 18px;
 }
 
-.container-input{
+.container-input {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    label{
+    label {
         margin: 15px 0px 5px 0px;
         font-size: 0.75rem;
         font-weight: 600;
-        color: var(--blue-color);
+        color: var(--green-color);
     }
 }
 
 .input,
-.select{
+.select {
     background: var(--input);
     border: 1px solid var(--input-border);
-    padding: 10px 14px;
+    padding: 18px;
     transition: var(--transition-duration);
     outline: transparent solid 2px;
     border-radius: var(--border-radius);
     font-size: .875rem;
-    &::placeholder{
+    &::placeholder {
         color: var(--grey-color);
     }
-    &:focus{
-        color: var(--orange-color);
+    &:focus {
+        color: var(--green-color);
     }
-    &.input-invalid{
+    &.input-invalid {
         border: 1px solid red;
     }
-    &:-webkit-autofill, &:-webkit-autofill-focus, &:-webkit-autofill-hover{
-        color: var(--orange-color);
+    &:-webkit-autofill,
+    &:-webkit-autofill-focus,
+    &:-webkit-autofill-hover {
+        color: var(--green-color);
     }
     &:focus,
-    &:focus-visible{
-        outline-color: var(--orange-color);
+    &:focus-visible {
+        outline-color: var(--green-color);
     }
 }
 
-.input-error{
+.input-error {
     padding: 10px 0;
 }
 
 // Responsive
-
 @media (min-width: 0px) and (max-width: 768px) {
     .burger-menu {
         display: block;
