--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -178,12 +178,19 @@ select:-webkit-autofill:focus {
     padding: 10px 0;
 }
 
+
 // Responsive
 @media (min-width: 0px) and (max-width: 768px) {
     .burger-menu {
         display: block;
     }
     .main-nav {
+        display: none;
+    }
+    .mobile{
+        display: block;
+    }
+    .desktop{
         display: none;
     }
 }
@@ -193,6 +200,12 @@ select:-webkit-autofill:focus {
         display: none;
     }
     .main-nav {
+        display: block;
+    }
+    .mobile{
+        display: none;
+    }
+    .desktop{
         display: block;
     }
 }
