--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -36,6 +36,7 @@ body {
     font-size: 1rem;
     transition-duration: var(--transition-duration);
     font-weight: 500;
+    max-width: max-content;
     cursor: pointer;
     &:hover {
         background-color: var(--green-hover);
