--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,31 @@
 @charset "utf-8";
 @import 'theme-colors.scss';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,400&display=swap');
+@font-face {
+    font-family: 'Gotham';
+    src: local('Gotham'),
+    url('@/assets/fonts/Gotham/GothamBook.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Gotham-bold';
+    src: local('Gotham-bold'),
+    url('@/assets/fonts/Gotham/GothamBold.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Apfel';
+    src: local('Apfel'),
+    url('@/assets/fonts/ApfelGrotezk/ApfelGrotezk-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Apfel-bold';
+    src: local('Apfel-bold'),
+    url('@/assets/fonts/ApfelGrotezk/ApfelGrotezk-Fett.ttf') format('truetype');
+}
+
 html {
     font-size: 16px;
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Gotham', sans-serif;
     background-color: var(--background-color);
     color: var(--blue-color);
 }
