caroussel module + init + fix general

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,7 +27,7 @@ html {
     margin: 0;
     font-family: 'Gotham', sans-serif;
     background-color: var(--background-color);
-    color: var(--blue-color);
+    color: var(--green-color);
 }
 
 body {
