--- a/style/main.scss
+++ b/style/main.scss
@@ -101,10 +101,13 @@ strong {
 
 .image-section {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
     img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
