--- a/style/main.scss
+++ b/style/main.scss
@@ -8,7 +8,7 @@ html {
     font-family: 'Gotham', sans-serif;
     font-style: normal;
     font-weight: normal;
-    background-color: var(--background-color);
+    background-color: var(--white-color);
     color: var(--green-color);
 }
 
@@ -116,14 +116,14 @@ strong {
     display: inline-block;
     border-radius: 40px;
     background-color: var(--green-color);
-    color: #fff;
+    color: var(--white-color);
     font-size: 1rem;
     transition-duration: var(--transition-duration);
     font-weight: 500;
     cursor: pointer;
     &:hover {
         background-color: var(--green-hover);
-        color: #fff;
+        color: var(--white-color);
     }
 }
 
@@ -134,7 +134,7 @@ input.btn-primary {
     width: 100%;
     &:disabled {
         cursor: not-allowed;
-        color: #fff;
+        color: var(--white-color);
         background-color: var(--grey-color);
     }
 }
@@ -145,7 +145,7 @@ input.btn-primary {
     border-radius: 40px;
     border: 1px solid var(--green-color);
     color: var(--green-color);
-    background: var(--background-color);
+    background: var(--white-color);
     font-size: 1rem;
     transition-duration: var(--transition-duration);
 }
@@ -165,14 +165,14 @@ input.btn-primary {
 }
 
 .modal {
-    background-color: var(--background-color);
+    background-color: var(--white-color);
     border-radius: var(--border-radius);
     overflow: hidden;
     min-width: 700px;
     &-header {
         padding: 15px;
         background-color: var(--green-color);
-        color: #fff;
+        color: var(--white-color);
         font-weight: 500;
         display: flex;
         justify-content: space-between;
@@ -196,7 +196,7 @@ input.btn-primary {
 }
 
 .link {
-    color: var(--background-color);
+    color: var(--white-color);
 }
 
 strong {
@@ -216,7 +216,7 @@ select:-webkit-autofill:focus {
     -webkit-text-fill-color: var(--green-color);
     -webkit-box-shadow: 0 0 0 1000px #F5FEFF9E inset;
     transition: background-color 5000s ease-in-out 0s;
-    background: var(--input);
+    background: var(--white-color);
     border: 1px solid var(--input-border);
     padding: 18px;
 }
@@ -233,7 +233,7 @@ select:-webkit-autofill:focus {
 
 .input,
 .select {
-    background: var(--input);
+    background: var(--white-color);
     border: 1px solid var(--input-border);
     padding: 18px;
     transition: var(--transition-duration);
