--- a/style/main.scss
+++ b/style/main.scss
@@ -128,10 +128,9 @@ strong {
 }
 
 input.btn-primary {
-    color: var(--green-color);
     margin-top: 25px;
     font-weight: 600;
-    width: 100%;
+    padding: 10px 50px;
     &:disabled {
         cursor: not-allowed;
         color: var(--white-color);
@@ -213,29 +212,30 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-    -webkit-text-fill-color: var(--green-color);
-    -webkit-box-shadow: 0 0 0 1000px #F5FEFF9E inset;
-    transition: background-color 5000s ease-in-out 0s;
-    background: var(--white-color);
-    border: 1px solid var(--input-border);
-    padding: 18px;
+  -webkit-text-fill-color: var(--green-color);
+  -webkit-box-shadow: 0 0 0 1000px #F5FEFF9E inset;
+  transition: background-color 5000s ease-in-out 0s;
+  background: var(--white-color);
+  border: 1px solid var(--input-border);
+  padding: 18px;
 }
 
 .container-input {
-    display: flex;
-    flex-direction: column;
-    label {
-        margin: 15px 0 5px 0;
-        font-family: 'Apfel', sans-serif;
-        color: var(--pale-color);
-    }
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  label {
+    margin-bottom: 5px;
+    font-family: 'Apfel', sans-serif;
+    color: var(--green-color);
+  }
 }
 
 .input,
 .select {
     background: var(--white-color);
-    border: 1px solid var(--input-border);
-    padding: 18px;
+    border: 1px solid var(--green-color);
+    padding: 10px 15px;
     transition: var(--transition-duration);
     outline: transparent solid 2px;
     border-radius: var(--border-radius);
